Incorporated contact details into the Project Summary classes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,8 @@ export(PeptideDetail)
 export(ProteinDetail)
 export(download.file.by.name)
 export(download.fileDetail)
-export(download.files.from.project)
+export(download.files.from.accession)
+export(download.files.from.project.list)
 export(folder.upload.Pride)
 export(get.PeptideDetail.accession)
 export(get.ProjectSummary)
@@ -16,23 +17,25 @@ export(get.list.ProteinDetail)
 export(get.similar.projects)
 export(list.ProjectSummary)
 export(project.FileDetail)
+export(search.FileDetail)
 export(search.ProjectSummary)
 export(search.file.by.name)
-export(search.project.list)
 exportClasses(FileDetail)
 exportClasses(ProjectSummary)
 exportClasses(ProjectSummaryList)
 exportClasses(compactProjectSummary)
 exportClasses(compactProjectSummaryList)
 exportMethods("accession<-")
+exportMethods("affiliations<-")
 exportMethods("data.processing.protocol<-")
 exportMethods("diseases<-")
 exportMethods("download.link<-")
+exportMethods("file.bytes<-")
 exportMethods("file.name<-")
-exportMethods("file.size<-")
 exportMethods("file.type<-")
 exportMethods("identified.ptm.strings<-")
 exportMethods("instruments<-")
+exportMethods("lab.PIs<-")
 exportMethods("organism.parts<-")
 exportMethods("organisms<-")
 exportMethods("project.accession<-")
@@ -43,15 +46,18 @@ exportMethods("publication.date<-")
 exportMethods("quantification.methods<-")
 exportMethods("sample.processing.protocol<-")
 exportMethods("submission.type<-")
+exportMethods("submitters<-")
 exportMethods(accession)
+exportMethods(affiliations)
 exportMethods(data.processing.protocol)
 exportMethods(diseases)
 exportMethods(download.link)
+exportMethods(file.bytes)
 exportMethods(file.name)
-exportMethods(file.size)
 exportMethods(file.type)
 exportMethods(identified.ptm.strings)
 exportMethods(instruments)
+exportMethods(lab.PIs)
 exportMethods(organism.parts)
 exportMethods(organisms)
 exportMethods(page.number)
@@ -67,6 +73,7 @@ exportMethods(query)
 exportMethods(sample.processing.protocol)
 exportMethods(show)
 exportMethods(submission.type)
+exportMethods(submitters)
 import(methods)
 importFrom(rjson,fromJSON)
 importFrom(stringr,regex)
