Changed some function names. Removed the ProjectSummaryList object as I couldn't find a way to implement it cleanly. Implemented file type to the file search function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,8 @@ export(download.file.by.name)
 export(download.fileDetail)
 export(download.files.from.accession)
 export(download.files.from.project.list)
-export(folder.upload.Pride)
+export(get.FileDetail)
+export(get.FileDetail.by.name)
 export(get.PeptideDetail.accession)
 export(get.ProjectSummary)
 export(get.ProteinDetail.accession)
@@ -16,15 +17,11 @@ export(get.list.PeptideDetail)
 export(get.list.ProteinDetail)
 export(get.similar.projects)
 export(list.ProjectSummary)
-export(project.FileDetail)
 export(search.FileDetail)
 export(search.ProjectSummary)
-export(search.file.by.name)
 exportClasses(FileDetail)
 exportClasses(ProjectSummary)
-exportClasses(ProjectSummaryList)
 exportClasses(compactProjectSummary)
-exportClasses(compactProjectSummaryList)
 exportMethods("accession<-")
 exportMethods("affiliations<-")
 exportMethods("data.processing.protocol<-")
@@ -60,16 +57,12 @@ exportMethods(instruments)
 exportMethods(lab.PIs)
 exportMethods(organism.parts)
 exportMethods(organisms)
-exportMethods(page.number)
-exportMethods(page.size)
 exportMethods(project.accession)
 exportMethods(project.description)
-exportMethods(project.list)
 exportMethods(project.tags)
 exportMethods(project.title)
 exportMethods(publication.date)
 exportMethods(quantification.methods)
-exportMethods(query)
 exportMethods(sample.processing.protocol)
 exportMethods(show)
 exportMethods(submission.type)
