--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,PeptideDetail)
 S3method(print,ProteinDetail)
+export(FileDetailList)
 export(PeptideDetail)
 export(ProteinDetail)
 export(download.file.by.name)
@@ -9,6 +10,7 @@ export(download.fileDetail)
 export(download.files.from.accession)
 export(download.files.from.project.list)
 export(get.FileDetail)
+export(get.FileDetail.ProjectSummary.List)
 export(get.FileDetail.by.name)
 export(get.PeptideDetail.accession)
 export(get.ProjectSummary)
@@ -67,7 +69,4 @@ exportMethods(sample.processing.protocol)
 exportMethods(show)
 exportMethods(submission.type)
 exportMethods(submitters)
-import(methods)
 importFrom(rjson,fromJSON)
-importFrom(stringr,regex)
-importFrom(stringr,str_detect)
