Fixed some of the warnings and notes that RMD check was returning and updated some documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,4 +70,5 @@ exportMethods(sample.processing.protocol)
 exportMethods(show)
 exportMethods(submission.type)
 exportMethods(submitters)
+import(methods)
 importFrom(rjson,fromJSON)
