Fixed a few more warnings and notes. Only one remains.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ S3method(print,ProteinDetail)
 export(FileDetailList)
 export(PeptideDetail)
 export(ProteinDetail)
-export(download.file.by.name)
-export(download.fileDetail)
-export(download.files.from.accession)
-export(download.files.from.project.list)
+export(download.by.accession)
+export(download.by.fileDetail)
+export(download.by.name)
+export(download.project.list)
 export(get.FileDetail)
 export(get.FileDetail.by.name)
 export(get.FileDetailList)
@@ -72,3 +72,4 @@ exportMethods(submission.type)
 exportMethods(submitters)
 import(methods)
 importFrom(rjson,fromJSON)
+importFrom(utils,download.file)
