Fixed the last few warnings and notes. Cleaned up project search. Fixed an issue with file searching where it would not be able to take in just a ProjectSummary.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Description: Includes classes and functions to retrieve project, file, peptide,
     and protein meta data from the Pride Archive. Utilizes the Pride API which
     can be found here: https://www.ebi.ac.uk/pride/ws/archive/v2/swagger-ui.html.
 License: GPL-3
-Depends: R (>= 3.0.0), methods, rjson
+Depends: R (>= 3.0.0), rjson
+Imports: methods
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
